--- a/style.css
+++ b/style.css
@@ -1,14 +1,48 @@
-#google-logo{
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    padding: 10% 10% 10% 10%;
+body{
+    font-family: Arial, sans-serif;
 }
+
+#top-nav{
+    padding-top: 20px;
+    padding-bottom: 100px;
+}
+
+a{
+    color: black;
+    text-decoration: none;
+}
+.left-nav{
+    float: left;
+}
+.right-nav{
+    float: right;
+}
+ul{
+    list-style-type: none;
+    margin:0px;
+    padding:0px;
+}
+
+ul li{
+    display:inline;
+    padding: 0px 16px 14px 16px;
+}
+
+#google-logo{
+    text-align: center;
+    padding: 10px 10px 50px 10px;
+}
+
+#google-logo img{
+    width: 20%
+}
+
 
 #searchbar{
     display: flex;
-    justify-content: center;
-    flex-direction: row;
+    flex-direction: column;
+    align-items: center;
+
 }
 
 #searchbar form{
@@ -16,7 +50,56 @@
 }
 
 #searchbar input{
+    display:flex;
     border-radius: 20px;
     width: 100%;
     padding: 10px 10px 10px 10px;
+    border: 1px solid #d9d9d9e8;
+}
+
+footer{
+    background-color: rgb(242,242,242);
+    display: flex;
+    position: fixed;
+    bottom:0;
+    left:0;
+    width:100%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    justify-content: space-between;
+
+}
+
+.left-footer{
+    width: 33%;
+}
+
+.right-footer{
+    width: 33%;
+    text-align: right;
+
+}
+
+.center-footer{
+    width: 33%;
+    text-align: center;
+
+}
+
+footer a{
+    padding:10px;
+}
+
+#search-button{
+    padding: 50px 0 10px 0;
+}
+
+#search-button button{
+    background-color: #f8f9fa;
+    border-radius: 10%;
+    padding: 5px 10px 5px 10px;
+    border: 1px solid white;
+}
+#search-button button:hover{
+    border: 1px solid #d9d9d9e8;
 }
