--- a/style.css
+++ b/style.css
@@ -37,24 +37,26 @@ ul li{
     width: 20%
 }
 
-
 #searchbar{
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    width: 30vw;
+    margin:auto;
+    box-shadow: 0 1px 6px 0 rgba(32, 33, 36, 0.28);
+    border: 0px black solid;
+    border-radius: 100px;
+    padding: 10px;
 
-}
-
-#searchbar form{
-    width: 40%;
 }
 
 #searchbar input{
-    display:flex;
-    border-radius: 20px;
-    width: 100%;
-    padding: 10px 10px 10px 10px;
-    border: 1px solid #d9d9d9e8;
+    width:90%;
+    border: none;
+    background-color: transparent;
+    outline: none;
+}
+
+#search-icon{
+    display: block;
 }
 
 footer{
